--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.kyrylokuzyk.primetween": "file:../Assets/Plugins/PrimeTween/internal/com.kyrylokuzyk.primetween.tgz",
     "com.unity.addressables": "2.2.2",
     "com.unity.ai.navigation": "2.0.6",
+    "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.entities": "1.3.10",
     "com.unity.entities.graphics": "1.4.8",
@@ -12,6 +13,7 @@
     "com.unity.inputsystem": "1.13.1",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.physics": "1.3.10",
+    "com.unity.probuilder": "6.0.5",
     "com.unity.purchasing": "4.12.2",
     "com.unity.remote-config": "4.1.1",
     "com.unity.render-pipelines.universal": "17.2.0",
